2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: Bumped to 0.1.6

2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Updated NEWS for release 0.1.5

2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Application.cs: Updated the About dialog with the correct project
	  location

2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* src/TaskWindow.cs: Fixed the main window icon to be larger

2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* src/PreferencesDialog.cs, src/AllCategory.cs, src/TaskWindow.cs,
	  src/Preferences.cs: Modified the preferences so there is a
	  HideInAllCategory and any category listed will not be shown in the All
	  Category.

2008-03-12  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* data/images/tasque-icons-source.svg: Added jimmac's source SVG for
	  the Tasque icons.

2008-03-12  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* data/images/tasque.svg, data/images/Makefile.am: Added real SVG of
	  Tasque icon for scalable goodness.

2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* src/PreferencesDialog.cs: Updated to not include the All category in prefs
	  dialog

2008-03-12  Boyd Timothy <btimothy@gmail.com> 

	* src/PreferencesDialog.cs, src/NoteDialog.cs, src/Application.cs,
	  src/TaskWindow.cs: Adjust icons that are used in the window titlebar to
	  be 16x16 so they appear better.  Also adjust the tasque icon and execute
	  icon in the tray icon to be 16x16 to match the rest of the menu.

2008-03-12  Boyd Timothy <btimothy@gmail.com> 

	* Initial check in of Tasque to GNOME SVN.

2008-03-11  Calvin Gaisford <calvinrg@gmail.com> 

	* data/images/tasque-22.png, data/images/tasque-32.png,
	  data/images/tasque-24.png, data/images/tasque-16.png,
	  data/images/tasque-48.png, MAINTAINERS: Updated graphics and new valid
	  MAINTAINERS file

2008-03-09  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Only use notify-sharp when enabled in configure.
